istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
  - port:
      number: 80
      name: http2
      protocol: HTTP
      
    hosts:
    - "webstatus1.com"   # Domain name of the external website


---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aspnetrunbasics
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "shop1.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: aspnetrunbasics
            port:
              number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webstatus
  namespace: default
spec:
  hosts:
  - "webstatus1.com"
  gateways:
  - ingress-gateway-configuration
  http:
  - route:
    - destination:
        host: webstatus
        port:
          number: 80
